[package]
name = "goat-cli"
version = "0.1.53"
authors = ["Max Brown <mb39@sanger.ac.uk>"]
edition = "2021"
license = "MIT"
description = "Query metadata for any species across the tree of life."
homepage = "https://github.com/genomehubs/goat-cli"
repository = "https://github.com/genomehubs/goat-cli"
documentation = "https://github.com/genomehubs/goat-cli/wiki"
keywords = ["goat", "genome", "tree", "ncbi", "genomics"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "3.1.1", features = ["cargo"] }
reqwest = "0.11.5"
tokio = { version = "1.12.0", features = ["full"] }
lazy_static = "1.4.0"
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3.17"
again = "0.1"
async-std = "1.10.0"
indicatif = "0.16.2"
regex = "1.5.4"
tabled = "0.6.0"