[package]
name = "goat-cli"
version = "0.2.0"
authors = ["Max Brown <mb39@sanger.ac.uk>", "Rich Challis <goat@genomehubs.org>", "Sujai Kumar <goat@genomehubs.org>", "Cibele Sotero-Caio <goat@genomehubs.org>"]
edition = "2021"
license = "MIT"
description = "Query metadata for any species across the tree of life."
homepage = "https://github.com/genomehubs/goat-cli/wiki"
repository = "https://github.com/genomehubs/goat-cli"
documentation = "https://genomehubs.github.io/goat-cli/goat_cli/"
keywords = ["goat", "genome", "tree", "ncbi", "genomics"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "3.1.1", features = ["cargo"] }
reqwest = "0.11.5"
tokio = { version = "1.12.0", features = ["full"] }
lazy_static = "1.4.0"
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3.17"
again = "0.1"
async-std = "1.10.0"
indicatif = "0.16.2"
regex = "1.5.4"
tabled = "0.7.0"
rand = "0.8.5"