[package]
name = "goat-cli"
version = "0.2.52"
authors = [
    "Max Brown <max.carter-brown@aru.ac.uk>",
    "Rich Challis <goat@genomehubs.org>",
    "Sujai Kumar <goat@genomehubs.org>",
    "Cibele Sotero-Caio <goat@genomehubs.org>",
]
edition = "2021"
license = "MIT"
description = "Query metadata for any species across the tree of life."
homepage = "https://github.com/genomehubs/goat-cli/wiki"
repository = "https://github.com/genomehubs/goat-cli"
documentation = "https://genomehubs.github.io/goat-cli/goat_cli/"
keywords = ["goat", "genome", "tree", "ncbi", "genomics"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "4.0.22", features = ["cargo"] }
reqwest = "0.11.12"
tokio = { version = "1.12.0", features = ["full"] }
lazy_static = "1.4.0"
serde_json = "1.0"
futures = "0.3.17"
again = "0.1"
async-std = "1.10.0"
indicatif = "0.17.1"
regex = "1.5.4"
tabled = "0.10.0"
rand = "0.8.5"
anyhow = "1.0.75"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
